[package]
name = "pull-request-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.18.1"
octocrab = "0.33.1"
rusqlite = { version = "0.30.0", features = ["bundled", "chrono"] }
tokio = { version = "1.35.1", features = ["full"] }
